Added general info

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food</title>
 </head>
 
 <body>
-    <h1>New</h1>
+    <h1>Health - доставка здорової їжі</h1>
+     <h2>Здорове харчування – тренд чи дійсно користь?</h2>
+    <p>Напевно лише лінивий нічого не чув про здорове харчування(ЗХ). Адже ледь не в кожному ток-шоу розповідають про ПП,«правильное питание» так його називають російською. Тренд це чи ні, але я безперечно цьому рада, бо в моду входить звичка бути здоровим!
+Здорове харчування це ні в якому разі не ДІЄТА. Здорове харчування – це такий своєрідний спосіб життя, коли людина відмовляється від «харчового сміття» і споживає лиш ту їжу, яка здатна приносити певну користь організму та забезпечувати всі життєвонеобхідні функції, а саме надавати енергію, забезпечувати ріст організму, нормальне функціонування всіх органів, сприяти зміцненню здоров’я. «Харчове сміття» – це продукти з поганеньким хімічним складом, які містять ароматизатори, підсилювачі смаку, консерванти, транс жири та інше. Та, на превеликий жаль, займають 90% полиць в продуктовому магазині.
+То чи дійсно треба дотримуватись такого харчування? Відповідь дуже проста – від правильного харчування чи здорового способу життя залежить наше здоров’я, а отже і майбутнє!</p>
+<img src="https://images.app.goo.gl/pEmgyCxms3jneRCf8" alt="Healthy food">
+  <h3>Це важливо для:</h3>
+   <ul>
+   <li>активних і спортивних людей</li>
+   <li>кому важливі відчуття легкості і сили організму</li>
+   <li>людей з дефіцитом часу</li>
+ <li>людей із зайвою вагою</li>
+     </ul>
+     <a href="#">Отримати консультацію</a>
+
+     <h3>Ми пропонуємо:</h3>
+      <ol>
+   <li>набори харчування на цілий день</li>
+   <li>обіди</li>
+   <li>кейтеринг</li>
+      </ol>
+
+<h3><i>Типове меню подано в таблиці</i></h3>
+
+    <p>Оформлення замовлення за 5 хв</p>
+    <form>
+<input type="text" placeholder="Ваше ім'я*" required> <br><br>
+<input type="text" placeholder="Номер телефону*" required><br><br>
+<input type="text" placeholder="Тип режиму харчування" ><br><br>
+<input type="text" placeholder="Коментар" ><br><br>
+<input type="submit">
+    </form>  
+
 </body>
 </html>
