--- a/index.html
+++ b/index.html
@@ -1,44 +1,106 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Food</title>
+
 </head>
 
 <body>
-    <h1>Health - доставка здорової їжі</h1>
-     <h2>Здорове харчування – тренд чи дійсно користь?</h2>
-    <p>Напевно лише лінивий нічого не чув про здорове харчування(ЗХ). Адже ледь не в кожному ток-шоу розповідають про ПП,«правильное питание» так його називають російською. Тренд це чи ні, але я безперечно цьому рада, бо в моду входить звичка бути здоровим!
-Здорове харчування це ні в якому разі не ДІЄТА. Здорове харчування – це такий своєрідний спосіб життя, коли людина відмовляється від «харчового сміття» і споживає лиш ту їжу, яка здатна приносити певну користь організму та забезпечувати всі життєвонеобхідні функції, а саме надавати енергію, забезпечувати ріст організму, нормальне функціонування всіх органів, сприяти зміцненню здоров’я. «Харчове сміття» – це продукти з поганеньким хімічним складом, які містять ароматизатори, підсилювачі смаку, консерванти, транс жири та інше. Та, на превеликий жаль, займають 90% полиць в продуктовому магазині.
-То чи дійсно треба дотримуватись такого харчування? Відповідь дуже проста – від правильного харчування чи здорового способу життя залежить наше здоров’я, а отже і майбутнє!</p>
-<img src="https://images.app.goo.gl/pEmgyCxms3jneRCf8" alt="Healthy food">
-  <h3>Це важливо для:</h3>
-   <ul>
-   <li>активних і спортивних людей</li>
-   <li>кому важливі відчуття легкості і сили організму</li>
-   <li>людей з дефіцитом часу</li>
- <li>людей із зайвою вагою</li>
-     </ul>
-     <a href="#">Отримати консультацію</a>
+	<header>
+		<h1>Health - доставка здорової їжі</h1>
+		<nav>
+			<p> Для оформлення замовлення натисніть <a href="#Order">тут</a></p>
+		</nav>
+	</header>
+	<main>
+		<h2>Здорове харчування – тренд чи дійсно користь?</h2>
+		<img src="img/food.jpg" alt="Healthy food"> 
+		<p>Напевно лише лінивий нічого не чув про здорове харчування(ЗХ). Адже ледь не в кожному ток-шоу розповідають
+			про ПП,«правильное питание» так його називають російською. Тренд це чи ні, але я безперечно цьому рада, бо в
+			моду входить звичка бути здоровим!
+			Здорове харчування це ні в якому разі не ДІЄТА. Здорове харчування – це такий своєрідний спосіб життя, коли
+			людина відмовляється від «харчового сміття» і споживає лиш ту їжу, яка здатна приносити певну користь
+			організму та забезпечувати всі життєвонеобхідні функції, а саме надавати енергію, забезпечувати ріст
+			організму, нормальне функціонування всіх органів, сприяти зміцненню здоров’я. «Харчове сміття» – це продукти
+			з поганеньким хімічним складом, які містять ароматизатори, підсилювачі смаку, консерванти, транс жири та
+			інше. Та, на превеликий жаль, займають 90% полиць в продуктовому магазині.
+			То чи дійсно треба дотримуватись такого харчування? Відповідь дуже проста – від правильного харчування чи
+			здорового способу життя залежить наше здоров’я, а отже і майбутнє!</p>
+		<a href="http://bug.org.ua/opinion/zdorove-kharchuvannia-trend-chy-di-sno-koryst-263498/">Детальніше...</a><br>
 
-     <h3>Ми пропонуємо:</h3>
-      <ol>
-   <li>набори харчування на цілий день</li>
-   <li>обіди</li>
-   <li>кейтеринг</li>
-      </ol>
+ 
 
-<h3><i>Типове меню подано в таблиці</i></h3>
 
-    <p>Оформлення замовлення за 5 хв</p>
-    <form>
-<input type="text" placeholder="Ваше ім'я*" required> <br><br>
-<input type="text" placeholder="Номер телефону*" required><br><br>
-<input type="text" placeholder="Тип режиму харчування" ><br><br>
-<input type="text" placeholder="Коментар" ><br><br>
-<input type="submit">
-    </form>  
+		<h3>Це важливо для:</h3>
+		<ul>
+			<li>активних і спортивних людей</li>
+			<li>кому важливі відчуття легкості і сили організму</li>
+			<li>людей з дефіцитом часу</li>
+			<li>людей із зайвою вагою</li>
+		</ul>
+		<a href="#">Отримати консультацію</a>
 
+		<h3>Ми пропонуємо:</h3>
+		<ol>
+			<li>набори харчування на цілий день</li>
+			<li>обіди</li>
+			<li>кейтеринг</li>
+		</ol>
+		<br>
+
+		<article>
+			<hr>
+			<h3><i>Типове меню подано в таблиці</i></h3>
+			<table>
+				<tr>
+					<th>Назва___________________ </th>
+					<th> Калорійність______</th>
+					<th> Білки_____________</th>
+					<th> Вуглеводи_________</th>
+				</tr>
+				<tr>
+					<td>Вівсяно-чорничні панкейки</td>
+					<td>108.5 ккал / 100 г</td>
+					<td>5.4 г</td>
+					<td>22 г</td>
+				</tr>
+				<tr>
+					<td>Рулет з телятини</td>
+					<td>108.5 ккал / 100 г</td>
+					<td>10.7 г</td>
+					<td>7 г</td>
+				</tr>
+				<tr>
+					<td>Салат "Цезар"</td>
+					<td>108.5 ккал / 100 г</td>
+					<td>8.7 г</td>
+					<td>22 г</td>
+				</tr>
+				<article>
+			</table>
+			<br><br>
+
+			<hr>
+
+			<h3 id="Order"><i>Оформлення замовлення за 5 хв</h3></i>
+				<form>
+					<input type="text" placeholder="Ваше ім'я*" name="user" required> <br><br>
+					<input type="text" placeholder="Номер телефону*" name="telephone" required><br><br>
+					<input type="text" placeholder="Тип режиму харчування" ><br><br>
+					<input type="text" placeholder="Коментар" ><br><br>
+					<input type="submit">
+  </form>
+					<nav>
+						<p>Для нас важлива ваша думка! Візьміть участь в <a href="form.html">опитуванні</a></p>
+					</nav>
+	</main>
+	<footer>
+		<p><i>2020 Healthy Food</i></p>
+
+	</footer>
 </body>
+
 </html>
