--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 	<main>
 		<h2>Здорове харчування – тренд чи дійсно користь?</h2>
-		<img src="img/food.jpg" alt="Healthy food"> 
+		<img src="img/food.jpg" alt="Healthy food"> 
 		<p>Напевно лише лінивий нічого не чув про здорове харчування(ЗХ). Адже ледь не в кожному ток-шоу розповідають
 			про ПП,«правильное питание» так його називають російською. Тренд це чи ні, але я безперечно цьому рада, бо в
 			моду входить звичка бути здоровим!
@@ -50,7 +50,6 @@
 			<li>кейтеринг</li>
 		</ol>
 		<br>
-
 		<article>
 			<hr>
 			<h3><i>Типове меню подано в таблиці</i></h3>
@@ -79,23 +78,24 @@
 					<td>8.7 г</td>
 					<td>22 г</td>
 				</tr>
-				<article>
+
 			</table>
-			<br><br>
+		</article>
+		<br><br>
 
-			<hr>
+		<hr>
 
-			<h3 id="Order"><i>Оформлення замовлення за 5 хв</h3></i>
-				<form>
-					<input type="text" placeholder="Ваше ім'я*" name="user" required> <br><br>
-					<input type="text" placeholder="Номер телефону*" name="telephone" required><br><br>
-					<input type="text" placeholder="Тип режиму харчування" ><br><br>
-					<input type="text" placeholder="Коментар" ><br><br>
-					<input type="submit">
+		<h3 id="Order"><i>Оформлення замовлення за 5 хв</i></h3>
+		<form>
+			<input type="text" placeholder="Ваше ім'я*" name="user" required> <br><br>
+			<input type="text" placeholder="Номер телефону*" name="telephone" required><br><br>
+			<input type="text" placeholder="Тип режиму харчування" ><br><br>
+			<input type="text" placeholder="Коментар" ><br><br>
+			<input type="submit">
   </form>
-					<nav>
-						<p>Для нас важлива ваша думка! Візьміть участь в <a href="form.html">опитуванні</a></p>
-					</nav>
+			<nav>
+				<p>Для нас важлива ваша думка! Візьміть участь в <a href="form.html">опитуванні</a></p>
+			</nav>
 	</main>
 	<footer>
 		<p><i>2020 Healthy Food</i></p>
